# Embedded_Diploma

./: .README.md.swp  README.md
1.C_programming/Assignment_1_basics/: Assignment1_Basics.docx  README.md  ex1.c  ex10.c  ex11.c  ex12.c  ex13.c  ex14.c  ex15.c  ex2.c  ex3.c  ex4.c  ex5.c  ex6.c  ex7.c  ex8.c  ex9.c
1.C_programming/Assignment_3_Arrays/: Ex1.c  Ex2.c  Ex3.c  Ex4.c  Ex5.c  README.md
1.C_programming/Assignment_4_String/: Ex1.c  Ex2.c  Ex3.c
1.C_programming/Assignment_5_function/: ex1.c  ex2.c  ex3.c  ex4.c
1.C_programming/Assignment_6_struct/: Ex1.c  Ex2.c  Ex3.c  Ex4.c  Ex5.c  Ex6.c
1.C_programming/Assignment_7_pointers/: Ex1.c  Ex2.c  Ex3.c  Ex4.c
2.Embedded_C/Lesson1/: platform_types.h
2.Embedded_C/Lesson2/Lab1/: app.c  makefile  uart-symble.txt
2.Embedded_C/Lesson3/Lab2_Part1/: makefile
2.Embedded_C/Lesson3/Lab2_Part2/: main.c  startup.c
2.Embedded_C/Lesson4/Lab3/: linker_script.ld  makefile
3.SystemArchitecture/Lesson1_DataStructure/1.FIFO_Buffer/: CMakeLists.txt  main.c
3.SystemArchitecture/Lesson1_DataStructure/1.FIFO_Buffer/src/: FIFO.c  FIFO.h  FIFO_Cfg.h
3.SystemArchitecture/Lesson1_DataStructure/1.FIFO_Buffer/test/: CMakeLists.txt  FIFO1.cpp
3.SystemArchitecture/Lesson1_DataStructure/2.LIFO_Buffer/: CMakeLists.txt  main.c
3.SystemArchitecture/Lesson1_DataStructure/2.LIFO_Buffer/src/: LIFO.c  LIFO.h  LIFO_Cfg.h
3.SystemArchitecture/Lesson1_DataStructure/2.LIFO_Buffer/test/: CMakeLists.txt  LIFO1.cpp
3.SystemArchitecture/Lesson1_DataStructure/3.Student management System/: CMakeLists.txt  main.c
3.SystemArchitecture/Lesson1_DataStructure/3.Student management System/src/: LogicSystem.c  LogicSystem.h  Student management System.c
3.SystemArchitecture/Lesson1_DataStructure/3.Student management System/test/: CMakeLists.txt
3.SystemArchitecture/Lesson1_DataStructure/4.LinkedList_student_project/: CMakeLists.txt  main.c
3.SystemArchitecture/Lesson1_DataStructure/4.LinkedList_student_project/src/: CMakeLists.txt  Linkedlist.c  Linkedlist.h
C_programming/Assignment_1_basics/: New Microsoft Word Document.docx  ex1.c  ex10.c  ex11.c  ex12.c  ex13.c  ex14.c  ex15.c  ex2.c  ex3.c  ex4.c  ex5.c  ex6.c  ex7.c  ex8.c  ex9.c
C_programming/Assignment_3_Arrays/: Ex1.c  Ex2.c  Ex3.c  Ex4.c  Ex5.c  New Microsoft Word Document.docx
C_programming/Assignment_4_String/: Ex1.c  Ex2.c  Ex3.c
C_programming/Assignment_5_function/: ex1.c  ex2.c  ex3.c  ex4.c
C_programming/Assignment_5_struct/: Ex2.c  Ex3.c  Ex4.c
C_programming/Assignment_6_pointers/: Ex1.c  Ex2.c  Ex3.c  Ex4.c
C_programming/Assignment_6_struct/: Ex1.c  Ex3.c  Ex5.c  Ex6.c
C_programming/Assignment_7_pointers/: Ex1.c  Ex2.c  Ex3.c  Ex4.c
Embedded_C/Lesson2/Lab1/: Map_file.map  commands.docx  learn-in-depth.elf
Embedded_C/Lesson3/Lab2_Part1/: linker_script.ld  startup.s  uart.c  uart.h
Embedded_C/Lesson3/Lab2_Part2/: linker_script.ld  makefile
Embedded_C/Lesson4/Lab3/: main.c  startup.c
Embedded_C/lesson2_Assignment/: Map_file.map  app-symble.txt  commands.docx  commands.txt  learn-in-depth-symble.txt  learn-in-depth.elf
